--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,4 @@ loguru
 pydantic-settings
 tenacity
 discord.py
-google-cloud-speech
-google-auth
+whisper  # OpenAI Whisper for voice transcription
