--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ loguru
 pydantic-settings
 tenacity
 discord.py
-whisper  # OpenAI Whisper for voice transcription
+openai-whisper  # OpenAI Whisper for voice transcription
