--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,17 @@ services:
     name: monsterrr-api
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 8000"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    envVars:
+      - key: PYTHONPATH
+        value: .
+      - key: DAILY_ACTIVITY_MODE
+        value: enabled
   - type: worker
-    name: monsterrr-discord
+    name: monsterrr-worker
     runtime: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python -m services.discord_bot_runner"
+    envVars:
+      - key: PYTHONPATH
+        value: .
