--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: monsterrr-api
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    startCommand: "python -m main web"
     envVars:
       - key: PYTHONPATH
         value: .
@@ -18,7 +18,7 @@ services:
     name: monsterrr-worker
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python -m services.discord_bot_runner"
+    startCommand: "python -m main worker"
     envVars:
       - key: PYTHONPATH
         value: .
